[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "arborize"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = ["numpy", "errr>=1.2.0", "morphio>=3.3.6"]
requires-python = ">=3.9"

[project.optional-dependencies]
parallel = ["mpi4py"]
bluepyopt = ["bluepyopt~=1.14", "dill~=0.3.8"]
neuron = ["nrn-patch>=4.0.0b3", "nmodl-glia[neuron]>=4.0.0b6"]
arbor = ["arbor>=0.9", "nmodl-glia[arbor]>=4.0.0b6"]
dev = ["sphinx", "sphinx_rtd_theme", "black==24.1.1"]
test = ["coverage~=7.0"]

[project.urls]
Home = "https://github.com/dbbs-lab/arborize"

[tool.isort]
profile = "black"
